--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ main, develop ]
   schedule:
-    - cron: '0 2 * * *'
+ #   - cron: '0 2 * * *'
 
 env:
   DOTNET_VERSION: '6.0.x'
